--- a/social.html
+++ b/social.html
@@ -37,21 +37,8 @@
       color: #7a7a7a
     }
 
-
-    .blog:hover {
-      color: #ffbd2f;
-    }
-
     .email:hover {
       color: #23c8c8;
-    }
-
-    .facebook:hover {
-      color: #4267B2;
-    }
-
-    .instagram:hover {
-      color: rgb(241, 102, 217);
     }
 
     .linkedin:hover {
@@ -62,30 +49,8 @@
       color: #26a7de;
     }
 
-    .reddit:hover {
-      color: #ff4500;
-    }
-
-    .tiktok:hover {
+    .medium:hover {
       color: #ff0050;
-    }
-
-    .youtube:hover {
-      color: #FF0000;
-    }
-
-    .pinterest:hover {
-      color: #c8232c;
-    }
-
-    .telegram:hover {
-      color: #2AABEE;
-    }
-
-    .social {
-      position: relative;
-      margin: 10px;
-      cursor: pointer;
     }
   </style>
 
