--- a/social.html
+++ b/social.html
@@ -14,7 +14,7 @@
   <style>
     * {
       margin: 0;
-      padding: 0;
+      padding: 2cm;
       box-sizing: border-box;
     }
 
@@ -50,7 +50,7 @@
     }
 
     .medium:hover {
-      color: #ff0050;
+      color: #000000;
     }
   </style>
 
