--- a/social.html
+++ b/social.html
@@ -13,8 +13,8 @@
 
   <style>
     * {
-      margin: 0;
-      padding: 2cm;
+      margin: 4cm;
+      padding: 4cm;
       box-sizing: border-box;
     }
 
