--- a/social.html
+++ b/social.html
@@ -13,8 +13,8 @@
 
   <style>
     * {
-      margin: 0.5cm;
-      padding: 0;
+      margin: 0;
+      padding: 0.3cm;
       box-sizing: border-box;
     }
 
@@ -25,7 +25,7 @@
     }
 
     .wrapper {
-      padding-top: 10px;
+      padding-top: 0px;
       display: inline-flex;
 
     }
