--- a/social.html
+++ b/social.html
@@ -45,7 +45,7 @@
       color: #0e76a8;
     }
 
-    .twitter:hover {
+    .x:hover {
       color: #26a7de;
     }
 
@@ -85,11 +85,11 @@
       </div>
       <!-- End medium Icon -->
 
-       <!-- Start X Icon -->
-      <div id="X" onclick="navigate(this.id)" class="social">
+       <!-- Start x Icon -->
+      <div id="x" onclick="navigate(this.id)" class="social">
         <span class="icon X"><i class="fab fa-X"></i></span>
       </div>
-      <!-- End X Icon -->
+      <!-- End x Icon -->
 
       <!-- Start researchgate Icon -->
       <div id="researchgate" onclick="navigate(this.id)" class="social">
@@ -114,8 +114,8 @@
         else if (id === "linkedin") {
           window.open("https://www.linkedin.com/in/juan-pablo-reyes/", '_blank').focus(); //Add the url to your linkedin account
         }
-        else if (id === "X") {
-          window.open("https://twitter.com/jpreyesochoa", '_blank').focus(); //Add the url to your X account
+        else if (id === "x") {
+          window.open("https://twitter.com/jpreyesochoa", '_blank').focus(); //Add the url to your x account
         }
         else if (id === "medium") {
           window.open("https://medium.com/@jpreyesochoa", '_blank').focus(); //Add the url to your medium account
