--- a/social.html
+++ b/social.html
@@ -53,7 +53,7 @@
       color: #000000;
     }
     
-    .researchgate:hover {
+    .twitter:hover {
       color: #000000;
     }
     
@@ -85,11 +85,11 @@
       </div>
       <!-- End medium Icon -->
 
-       <!-- Start x Icon -->
-      <div id="x" onclick="navigate(this.id)" class="social">
-        <span class="icon X"><i class="fab fa-X"></i></span>
+       <!-- Start twitter Icon -->
+      <div id="twitter" onclick="navigate(this.id)" class="social">
+        <span class="icon twitter"><i class="fab fa-twitter"></i></span>
       </div>
-      <!-- End x Icon -->
+      <!-- End twitter Icon -->
 
       <!-- Start researchgate Icon -->
       <div id="researchgate" onclick="navigate(this.id)" class="social">
@@ -114,8 +114,8 @@
         else if (id === "linkedin") {
           window.open("https://www.linkedin.com/in/juan-pablo-reyes/", '_blank').focus(); //Add the url to your linkedin account
         }
-        else if (id === "x") {
-          window.open("https://twitter.com/jpreyesochoa", '_blank').focus(); //Add the url to your x account
+        else if (id === "twitter") {
+          window.open("https://twitter.com/jpreyesochoa", '_blank').focus(); //Add the url to your twitter account
         }
         else if (id === "medium") {
           window.open("https://medium.com/@jpreyesochoa", '_blank').focus(); //Add the url to your medium account
